[gd_scene load_steps=7 format=3 uid="uid://chtotxr78643o"]

[ext_resource type="Script" path="res://Scenes/UI/Dialog.gd" id="1_woqun"]
[ext_resource type="Texture2D" uid="uid://dueysroooceay" path="res://Assets/Sprites/Characters/alex.png" id="2_0wxdv"]
[ext_resource type="Script" path="res://Scripts/UiMessage.gd" id="3_axtfi"]
[ext_resource type="PackedScene" uid="uid://berwh4wig5kda" path="res://Scenes/UI/PressableButton.tscn" id="4_qadpl"]

[sub_resource type="LabelSettings" id="LabelSettings_clwoy"]
font_size = 35

[sub_resource type="LabelSettings" id="LabelSettings_uqq5d"]
font_size = 30

[node name="Dialog" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_woqun")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.67451)

[node name="Talking1" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -872.0
offset_top = 200.0
offset_right = -226.0
offset_bottom = 983.0
texture = ExtResource("2_0wxdv")
expand_mode = 1
stretch_mode = 5

[node name="Talking2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 2222.0
offset_top = 200.0
offset_right = 2868.0
offset_bottom = 983.0
texture = ExtResource("2_0wxdv")
expand_mode = 1
stretch_mode = 5
flip_h = true

[node name="UiMessage" type="Control" parent="."]
z_index = 100
custom_minimum_size = Vector2(1500, 250)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -500.0
offset_top = -250.0
offset_right = 500.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("3_axtfi")
message = "Encontraste una Merluza Antartica."
time_for_letter = 0.01

[node name="Button" parent="UiMessage" instance=ExtResource("4_qadpl")]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -29.0
offset_top = -30.0
offset_right = 21.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(1.3, 1.3)

[node name="ColorRect" type="ColorRect" parent="UiMessage"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0627451, 0.0627451, 0.0627451, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="UiMessage/ColorRect"]
custom_minimum_size = Vector2(1400, 200)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -75.0
offset_right = 450.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Name" type="Label" parent="UiMessage/ColorRect/VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_clwoy")

[node name="Label" type="Label" parent="UiMessage/ColorRect/VBoxContainer"]
layout_mode = 2
text = "
"
label_settings = SubResource("LabelSettings_uqq5d")
autowrap_mode = 2
